deleting unnecessary files, fix, cleanup